lin to the top hinzugefügt

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
         sapiente distinctio animi id delectus voluptatum in! lorem lorem lorem lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aperiam natus voluptatum dolore pariatur suscipit dolorum eum nam deleniti ipsam. Iusto corrupti laborum
         sapiente distinctio animi id delectus voluptatum in!
     </p>
+    <a href="index.html">Back to top</a>
 </body>
 
 </html>
