--- a/index.html
+++ b/index.html
@@ -9,32 +9,30 @@
 </head>
 
 <body>
+
+    <li type="i"><a href="#kopf1-1">zum przemek1</a></li>
+
     <ul>
-        <li type="i"><a href="#kopf1-1">zum przemek1</a></li>
-        <li type="none">
-            <ul>
-                <li>
-                    <a href="#kopf2-1">zum sub przemek1</a>
-                </li>
-                <li>
-                    <a href="#kopf2-2">zum sub przemek2</a>
-                </li>
-            </ul>
+        <li>
+            <a href="#kopf2-1">zum sub przemek1</a>
+        </li>
+        <li>
+            <a href="#kopf2-2">zum sub przemek2</a>
         </li>
     </ul>
-    <ul>
-        <li type="i"><a href="#kopf3-1">zum przemek3</a></li>
-        <li type="none">
-            <ul>
-                <li>
-                    <a href="#kopf4-1">zum sub przemek3-1</a>
-                </li>
-                <li>
-                    <a href="#kopf2-2">zum sub przemek3-2</a>
-                </li>
-            </ul>
-        </li>
-    </ul>
+    </li>
+    <li type="i"><a href="#kopf3-1">zum przemek3</a></li>
+    <li type="none">
+        <ul>
+            <li>
+                <a href="#kopf4-1">zum sub przemek3-1</a>
+            </li>
+            <li>
+                <a href="#kopf5-1">zum sub przemek3-2</a>
+            </li>
+        </ul>
+    </li>
+
 
     <h1 id="kopf1-1">przemek1</h1>
     <h2 id="kopf2-1">SUB przemek1</h2>
@@ -55,9 +53,10 @@
 
     <h2 id="kopf2-2">SUB przemek2</h2>
     <p>
-        lorem lorem lorem lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aperiam natus voluptatum dolore pariatur suscipit dolorum eum nam deleniti ipsam. Iusto corrupti laborum sapiente distinctio animi id delectus voluptatum in! lorem
-        lorem lorem lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aperiam natus voluptatum dolore pariatur suscipit dolorum eum nam deleniti ipsam. Iusto corrupti laborum sapiente distinctio animi id delectus voluptatum in! lorem
-        lorem lorem lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aperiam natus voluptatum dolore pariatur suscipit dolorum eum nam deleniti ipsam. Iusto corrupti laborum sapiente distinctio animi id delectus voluptatum in!
+        lorem lorem lorem lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aperiam natus voluptatum dolore pariatur suscipit dolorum eum nam deleniti ipsam. Iusto corrupti laborum sapiente distinckopf5-1tio animi id delectus voluptatum in!
+        lorem lorem lorem lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aperiam natus voluptatum dolore pariatur suscipit dolorum eum nam deleniti ipsam. Iusto corrupti laborum sapiente distinctio animi id delectus voluptatum
+        in! lorem lorem lorem lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aperiam natus voluptatum dolore pariatur suscipit dolorum eum nam deleniti ipsam. Iusto corrupti laborum sapiente distinctio animi id delectus voluptatum
+        in!
     </p>
 
     <h1 id="kopf3-1">przemek3</h1>
@@ -68,7 +67,7 @@
         lorem lorem lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aperiam natus voluptatum dolore pariatur suscipit dolorum eum nam deleniti ipsam. Iusto corrupti laborum sapiente distinctio animi id delectus voluptatum in!
     </p>
 
-    <h1 id="kopf4-1">przemek4</h1>
+    <h2 id="kopf4-1">sub przemek3-1</h2>
     <p>
         lorem lorem lorem lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aperiam natus voluptatum dolore pariatur suscipit dolorum eum nam deleniti ipsam. Iusto corrupti laborum sapiente distinctio animi id delectus voluptatum in! lorem
         lorem lorem lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aperiam natus voluptatum dolore pariatur suscipit dolorum eum nam deleniti ipsam. Iusto corrupti laborum sapiente distinctio animi id delectus voluptatum in! lorem
@@ -83,7 +82,7 @@
         sapiente distinctio animi id delectus voluptatum in!
     </p>
 
-    <h1 id="kopf5-1">przemek5</h1>
+    <h2 id="kopf5-1">sub przemek3-2</h2>
     <p>
         lorem lorem lorem lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aperiam natus voluptatum dolore pariatur suscipit dolorum eum nam deleniti ipsam. Iusto corrupti laborum sapiente distinctio animi id delectus voluptatum in! lorem
         lorem lorem lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aperiam natus voluptatum dolore pariatur suscipit dolorum eum nam deleniti ipsam. Iusto corrupti laborum sapiente distinctio animi id delectus voluptatum in! lorem
